# NOVA-OS-Native-Offline-Virtual-Assistant

./: .gitignore  LICENSE  PROJECT_MANIFEST.json  README.md  VALIDATION_REPORT.md  pyproject.toml
config/: nova.example.toml
docs/: ARCHITECTURE.md  BLUEPRINT.md  BUILD_SUMMARY.md  COMMANDS.md  DEVELOPER_GUIDE.md  FILE_MANIFEST.txt  LOCAL_MODELS.md  LOCAL_MODEL_SETUP.md  OFFLINE_SETUP.md  PLUGIN_DEVELOPMENT.md  PLUGIN_GUIDE.md  PLUGIN_SYSTEM.md  PRODUCT_BLUEPRINT.md  RAG_DESIGN.md  ROADMAP.md  SECURITY.md  SECURITY_MODEL.md  TESTING.md  USER_GUIDE.md  VALIDATION_REPORT.md  VOICE.md
docs/adr/: 001-local-first-default.md  002-ollama-provider.md  003-sqlite-memory.md  004-hash-embeddings-fallback.md  005-confirmation-gates.md  006-streamlit-dashboard-first.md  007-plugin-manifests.md  008-no-hidden-persistence.md  ADR-01.md  ADR-02.md  ADR-03.md  ADR-04.md  ADR-05.md  ADR-06.md  ADR-07.md  ADR-08.md  ADR-09.md  ADR-10.md  ADR-11.md  ADR-12.md
examples/: commands.sh  sample.csv
examples/docs/: security_note.md
examples/sample_data/: sample.csv  study.csv
examples/sample_notes/: nova.txt
nova/: __init__.py  assistant.py  cli.py  config.py  exceptions.py  logging_config.py  paths.py
nova/agents/: __init__.py  planner.py  roles.py
nova/ai/: __init__.py  base.py  brain.py  context_window.py  conversation.py  embeddings.py  fallback.py  messages.py  model_manager.py  model_profiles.py  ollama.py  prompts.py  providers.py  tool_use.py
nova/api/: app.py  server.py
nova/apps/: api.py  dashboard.py
nova/automation/: __init__.py  actions.py  apps.py  confirmation.py  desktop.py  executor.py  permissions.py  policy.py  processes.py  scheduler.py  screenshots.py  system_monitor.py  undo.py  workspace.py
nova/brain/: autonomy.py  critic.py  executor.py  nlu.py  planner.py  tools.py  workflows.py
nova/capabilities/: __init__.py  base.py  cleanup_strategist.py  dataset_scientist.py  document_librarian.py  memory_archivist.py  project_forge.py  registry.py  security_sentinel.py  study_coach.py  workflow_director.py
nova/cli/: main.py
nova/codegen/: analyzer.py  forge.py  project_generator.py  project_writer.py  refactor.py  reviewer.py  security_review.py  templates.py  test_writer.py
nova/coding/: __init__.py  code_review.py  project_generator.py
nova/core/: app.py  audit.py  config.py  context.py  errors.py  events.py  exceptions.py  formatting.py  logging.py  models.py  orchestrator.py  paths.py  redaction.py  result.py  router.py  runtime.py  safety.py  security.py  sqlite.py  status.py  text.py  time.py  types.py
nova/dashboard/: app.py
nova/llm/: base.py  (+6 more)
scripts/: smoke_test.py
tests/: conftest.py  test_automation.py  test_brain.py  test_capabilities.py  test_cli.py  test_codegen.py  test_data.py  test_documents.py  test_files.py  test_files_data_code.py  test_files_data_codegen.py  test_memory.py  test_memory_tasks.py  test_more_modules.py  test_plugins.py  test_plugins_orchestrator.py  test_plugins_workflows_security.py  test_rag.py  test_router.py  test_safety.py  test_security.py  test_tasks.py  test_v7_deeper_features.py  test_v7_new_features.py  test_workflows.py
(+259 files in other folders)
