[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-sovereign-ai-godmode"
version = "0.3.0"
description = "NOVA Sovereign AI Godmode: local-first personal AI operating layer for Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "NOVA Sovereign AI"}]
dependencies = []

[project.optional-dependencies]
full = [
  "streamlit>=1.34",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pandas>=2.1",
  "openpyxl>=3.1",
  "pypdf>=4.0",
  "python-docx>=1.1",
  "psutil>=5.9",
  "watchdog>=4.0",
  "requests>=2.31",
]
dashboard = ["streamlit>=1.34", "pandas>=2.1", "psutil>=5.9"]
ai = ["requests>=2.31"]
docs = ["pypdf>=4.0", "python-docx>=1.1", "openpyxl>=3.1", "pandas>=2.1"]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
nova = "nova.cli.main:main"

[tool.setuptools.packages.find]
include = ["nova*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
