[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-sovereign-ai"
version = "0.4.0"
description = "Local-first private personal AI operating layer in Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "NOVA Sovereign AI"}]
dependencies = []

[project.optional-dependencies]
full = [
  "streamlit>=1.31",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "httpx>=0.26",
  "pypdf>=4.0",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "pandas>=2.0",
  "psutil>=5.9",
  "pyttsx3>=2.90",
]
dashboard = ["streamlit>=1.31"]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
docs = ["pypdf>=4.0", "python-docx>=1.1", "openpyxl>=3.1"]
data = ["pandas>=2.0", "openpyxl>=3.1"]

[project.scripts]
nova = "nova.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nova*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
