[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-sovereign-ai"
version = "0.7.0"
description = "NOVA Sovereign AI: local-first personal AI operating layer with autonomous planning, memory, RAG, safe automation, plugins, dashboard, and project forge."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name="NOVA Project"}]
dependencies = []

[project.optional-dependencies]
full = [
  "streamlit>=1.35",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pypdf>=4.0",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "pandas>=2.0",
  "psutil>=5.9",
]
dashboard = ["streamlit>=1.35"]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
docs = ["pypdf>=4.0", "python-docx>=1.1", "openpyxl>=3.1"]
data = ["pandas>=2.0", "openpyxl>=3.1"]

[project.scripts]
nova = "nova.cli:main"

[tool.setuptools.packages.find]
include = ["nova*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
